Initial update for SpongeAPI changes